2003-10-29  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-translator-conversion__p.adb, aws-translator-conversion__f.adb:
	Fix typo in comment.
	Minor reformatting.

2003-10-01  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	Use GNATMAKE_FOR_HOST to build test_uconv. Support for cross-compilers.

	* aws-net-std__gnat.adb:
	(Shutdown): Add handler for Constraint_Error. This is continued
	 work for fix checked-in on 2003-07-15. Again this is really a
	 workaround.

2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	Use variable instead of directly calling tools.
	
2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	Add section to build AWS based on project files.
	(gbuild): New target.
	(gclean): Idem.
	(gsetup): Idem.

2003-07-18  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-net-std__gnat.adb:
	Minor reformatting.

2003-07-15  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-net-std__gnat.adb:
	(Shutdown): Add exception handling around Close_Socket. In some
	 cases (not really clear) the socket file descriptor is wrong and
	 this routine returns EBAF. This must be considered as a
	 workaround and analysed more deeply later.

2003-07-07  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-net-std__gnat.adb:
	(Receive): Fix type in message string.

2003-06-21  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-soap__nosoap.ads, aws-soap__nosoap.adb:
	Removed, not used. The new scheme is to use dispatchers.

	* aws-soap__soap.ads, aws-soap__soap.adb:
	Removed, not used. The new scheme is to use dispatchers.

2003-06-18  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-soap__soap.ads, aws-soap__soap.adb:
	Initial revision.
	
	* aws-soap__nosoap.ads, aws-soap__nosoap.adb:
	Initial revision.

2003-05-29  Anisimkov Dmitriy <anisimkov@yahoo.com>

	* src/test_uconv.adb:
	Fix suffixes __p and __f.

2003-05-06  Pascal Obry  <p.obry@wanadoo.fr>

	* src/test_uconv.adb:
	Moved (and renamed) from ../src.

	* aws-translator-conversion__f.adb, aws-translator-conversion__p.adb:
	Moved (and renamed) from ../src.